--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.3.2"
+    "grunt-contrib-uglify": "^0.3.3"
+  },
+  "dependencies": {
+    "grunt-cli": "^1.3.2"
   }
 }
